# mango

./: .gitignore  .readthedocs.yaml  README.md  requirements.txt  setup.cfg  setup.py
Data Availability/: InternalFeatures.py  Output_creation.py  README.md  TradeoffAnalysis.py  TradeoffAnalysis_DNA30.py  output_internal_features.py  test.py  test_analysis_scripts.py
Data Availability/data_output/: Apr5_test.aj1  Single_Objective_Figure4.aj1  design1.ply  design2.ply  design3.ply  design4.ply  multiobjective_output.aj1
Data Availability/input_to_oxdna/: Design1.top  Design1_forces.txt  Design2.top  Design2_forces.txt  Design3.top  Design3_forces.txt  Design4.top  Design4_forces.txt
Data Availability/oxDNA_output/: calculate_distances.py  calculate_max_hole_size.py
Data_Availability/: InternalFeatures.py  README.md  SingleObjectiveStudy.py
docs/: requirements.txt
mango.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mango/design_spaces/: __init__.py  bounding_box.py  polyhedral_design_space.py
mango/features/: __init__.py  excluded_regions.py  mesh_face.py  preserved_regions.py
mango/grammars/: __init__.py  origami_grammars.py
mango/mango_features/: excluded_regions.py  grammar_ramp.py  mesh_face.py
mango/optimization_features/: design_constraints.py
mango/optimizers/: __init__.py  design_constraints.py  multiobjective_simulated_annealing.py  objective_function.py  single_objective_shape_annealing.py
mango/tests/: test_bounding_boxes.py  test_constraints_and_grammars_polyhedral_space.py  test_design_export.py  test_excluded_region.py  test_mosa.py  (+10 more)
(+114 files in other folders)
