[metadata]
name = mango
version = 0.0.1
author = A.J. Vetturini
author_email: avetturi@andrew.cmu.edu
description = This is a library package for the generative design of DNA nanostructures using grammars. The functions, classes, and methods have been developed in accordance with the literature cited below. If you use this project in your work, we kindly ask you to cite as shown in the GitHub page.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ajvetturini/mango
classifiers = 
     Programming Language :: Python :: 3
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.9
include_package_data = True